<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TourGuideDetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_image_height"
            android:scaleType="centerCrop"
            android:contentDescription="@string/tour_place_image"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">
                    <TextView
                        style="@style/TitleStyle"
                        android:text="@string/address"
                        />
                    <TextView
                        android:id="@+id/address_details"
                        style="@style/SubTitleStyle"
                        tools:text="Address"/>
                    <View
                        style="@style/ViewStyle"/>
                    <TextView
                        style="@style/TitleStyle"
                        android:text="@string/open_hour"/>
                    <TextView
                        android:id="@+id/open_hour_details"
                        style="@style/SubTitleStyle"
                        tools:text="Sun - Sat 9.00 AM to 11 PM"/>
                    <View
                        style="@style/ViewStyle"/>
                    <TextView
                        style="@style/TitleStyle"
                        android:text="@string/rating"/>
                    <TextView
                        android:id="@+id/rating_details"
                        style="@style/SubTitleStyle"
                        tools:text="5 out of 5"/>
                    <View
                        style="@style/ViewStyle"/>
                    <TextView
                        style="@style/TitleStyle"
                        android:text="@string/description"/>
                    <TextView
                        android:id="@+id/description_details"
                        style="@style/SubTitleStyle"
                        tools:text="Long description text"/>
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>